<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/orange"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/name"
            android:hint="@string/hint_name"
            android:textColorHint="@color/input_register_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register" />

        <EditText
            android:id="@+id/email"
            android:hint="@string/hint_email"
            android:textColorHint="@color/input_register_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register" />

        <EditText
            android:id="@+id/phone"
            android:hint="@string/hint_phone"
            android:textColorHint="@color/input_register_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/input_register"
            />

        <EditText
            android:id="@+id/college"
            android:hint="Your college name"
            android:textColorHint="@color/input_register_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male "
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/femaleRegister"
                    android:layout_width="fill_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp"
                    android:text="Female"/>
            </RadioGroup>
        </LinearLayout>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_register"
            android:textColor="@color/orange" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
